// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginBottom": 25,
        "marginLeft": 10,
        "marginRight": 10,
        "paddingTop": 35,
      }
    }
  >
    <ModalImage
      style={
        Object {
          "borderRadius": 50,
          "height": 100,
          "marginBottom": 25,
          "overflow": "hidden",
          "width": 100,
        }
      }
    />
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
          "lineHeight": 36,
          "marginBottom": 15,
          "textAlign": "center",
        }
      }
    >
      Some Headline
    </Text>
    <View
      style={
        Object {
          "marginBottom": 15,
          "marginTop": 5,
        }
      }
    >
      <ArticleFlags />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 20,
          "lineHeight": 25,
          "marginBottom": 12.5,
          "paddingHorizontal": 10,
          "textAlign": "center",
        }
      }
    >
      Some Standfirst
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 15,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
</ArticleSkeleton>
`;

exports[`full article with style in the culture magazine 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginBottom": 25,
        "marginLeft": 10,
        "marginRight": 10,
        "paddingTop": 35,
      }
    }
  >
    <ModalImage
      style={
        Object {
          "borderRadius": 50,
          "height": 100,
          "marginBottom": 25,
          "overflow": "hidden",
          "width": 100,
        }
      }
    />
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "Flama-Bold",
          "fontSize": 30,
          "lineHeight": 35,
          "marginBottom": 15,
          "textAlign": "center",
        }
      }
    >
      Some Headline
    </Text>
    <View
      style={
        Object {
          "marginBottom": 15,
          "marginTop": 5,
        }
      }
    >
      <ArticleFlags />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 20,
          "lineHeight": 25,
          "marginBottom": 12.5,
          "paddingHorizontal": 10,
          "textAlign": "center",
        }
      }
    >
      Some Standfirst
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 15,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
</ArticleSkeleton>
`;

exports[`full article with style in the style magazine 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginBottom": 25,
        "marginLeft": 10,
        "marginRight": 10,
        "paddingTop": 35,
      }
    }
  >
    <ModalImage
      style={
        Object {
          "borderRadius": 50,
          "height": 100,
          "marginBottom": 25,
          "overflow": "hidden",
          "width": 100,
        }
      }
    />
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "CenturyGothic-Bold",
          "fontSize": 30,
          "lineHeight": 35,
          "marginBottom": 15,
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Some Headline
    </Text>
    <View
      style={
        Object {
          "marginBottom": 15,
          "marginTop": 5,
        }
      }
    >
      <ArticleFlags />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 20,
          "lineHeight": 25,
          "marginBottom": 12.5,
          "paddingHorizontal": 10,
          "textAlign": "center",
        }
      }
    >
      Some Standfirst
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 15,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
</ArticleSkeleton>
`;

exports[`full article with style in the sunday times magazine 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginBottom": 25,
        "marginLeft": 10,
        "marginRight": 10,
        "paddingTop": 35,
      }
    }
  >
    <ModalImage
      style={
        Object {
          "borderRadius": 50,
          "height": 100,
          "marginBottom": 25,
          "overflow": "hidden",
          "width": 100,
        }
      }
    />
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "Tiempos-Headline-Bold",
          "fontSize": 30,
          "lineHeight": 35,
          "marginBottom": 15,
          "textAlign": "center",
        }
      }
    >
      Some Headline
    </Text>
    <View
      style={
        Object {
          "marginBottom": 15,
          "marginTop": 5,
        }
      }
    >
      <ArticleFlags />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 20,
          "lineHeight": 25,
          "marginBottom": 12.5,
          "paddingHorizontal": 10,
          "textAlign": "center",
        }
      }
    >
      Some Standfirst
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 15,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
</ArticleSkeleton>
`;

exports[`tablet full article with style in the culture magazine 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginBottom": 25,
        "marginLeft": 10,
        "marginRight": 10,
        "paddingTop": 35,
      }
    }
  >
    <ModalImage
      style={
        Object {
          "borderRadius": 50,
          "height": 100,
          "marginBottom": 25,
          "overflow": "hidden",
          "width": 100,
        }
      }
    />
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "Flama-Bold",
          "fontSize": 30,
          "lineHeight": 35,
          "marginBottom": 15,
          "textAlign": "center",
        }
      }
    >
      Some Headline
    </Text>
    <View
      style={
        Object {
          "marginBottom": 15,
          "marginTop": 5,
        }
      }
    >
      <ArticleFlags />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 20,
          "lineHeight": 25,
          "marginBottom": 12.5,
          "paddingHorizontal": 10,
          "textAlign": "center",
        }
      }
    >
      Some Standfirst
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 15,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
</ArticleSkeleton>
`;

exports[`tablet full article with style in the style magazine 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginBottom": 25,
        "marginLeft": 10,
        "marginRight": 10,
        "paddingTop": 35,
      }
    }
  >
    <ModalImage
      style={
        Object {
          "borderRadius": 50,
          "height": 100,
          "marginBottom": 25,
          "overflow": "hidden",
          "width": 100,
        }
      }
    />
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "CenturyGothic-Bold",
          "fontSize": 30,
          "lineHeight": 35,
          "marginBottom": 15,
          "textAlign": "center",
          "textTransform": "uppercase",
        }
      }
    >
      Some Headline
    </Text>
    <View
      style={
        Object {
          "marginBottom": 15,
          "marginTop": 5,
        }
      }
    >
      <ArticleFlags />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 20,
          "lineHeight": 25,
          "marginBottom": 12.5,
          "paddingHorizontal": 10,
          "textAlign": "center",
        }
      }
    >
      Some Standfirst
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 15,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
</ArticleSkeleton>
`;

exports[`tablet full article with style in the sunday times magazine 1`] = `
<ArticleSkeleton>
  <View
    style={
      Object {
        "alignItems": "center",
        "marginBottom": 25,
        "marginLeft": 10,
        "marginRight": 10,
        "paddingTop": 35,
      }
    }
  >
    <ModalImage
      style={
        Object {
          "borderRadius": 50,
          "height": 100,
          "marginBottom": 25,
          "overflow": "hidden",
          "width": 100,
        }
      }
    />
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "Tiempos-Headline-Bold",
          "fontSize": 30,
          "lineHeight": 35,
          "marginBottom": 15,
          "textAlign": "center",
        }
      }
    >
      Some Headline
    </Text>
    <View
      style={
        Object {
          "marginBottom": 15,
          "marginTop": 5,
        }
      }
    >
      <ArticleFlags />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 20,
          "lineHeight": 25,
          "marginBottom": 12.5,
          "paddingHorizontal": 10,
          "textAlign": "center",
        }
      }
    >
      Some Standfirst
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginTop": 20,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <ArticleBylineWithLinks />
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
              "marginTop": 15,
            }
          }
        >
          Friday March 13 2015, 6.54pm, The Times
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "marginBottom": 20,
      }
    }
  >
    <ModalImage />
    <CenteredCaption />
  </View>
</ArticleSkeleton>
`;
